# simpleurlshortener

./: Cargo.toml  README.md
migrations/down/: 01_initial.sql
migrations/up/: 01_initial.sql
src/: create.rs  err.rs  hit.rs  macros.rs  main.rs  viz.rs
src/db/: create.rs  hit.rs  mod.rs  users.rs  viz.rs
templates/create/: create.html  create_success.html
templates/viz/: hits.html  index.html
