[package]
name = "url"
version = "0.1.0"
authors = ["dhy1996 <dhy1996@live.com.sg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0"
askama = "0.10.5"
chrono = "0.4.19"
deadpool-postgres = "0.5.6"
rand = "0.7.3"
regex = "1.4.2"
serde = "1.0.118"
tokio = "0.2.24"
tokio-postgres = { version = "0.5.5", features = ["with-chrono-0_4"] }